--- a/index.html
+++ b/index.html
@@ -35,15 +35,23 @@
             <section class="image">
                 <div class="img-main">
                     <img src="Flower Asset/pngwing 6.png" alt="">
-                    <p class="main-pp">Pink Flower Tree</p>
+                    <div>
+                        <h5 class="main-pp">Pink Flower Tree</h5>
+                    </div>
                 </div>
-                <div class="img-main">
-                    <img src="Flower Asset/pngwing 5.png" alt="">
-                    <p class="main-pp">Pink Flower Tree</p>
+                <div class="img-mai">
+                    <img src="Flower Asset/pngwing 5.png" >
+                    <div>
+                        <h5 class="main-pp">Pink Flower Tree</h5>
+                    </div>
                 </div>
-                <div class="img-main">
+                <div>
+                </div>
+                <div class="img-man">
                     <img src="Flower Asset/pngwing 7.png" alt="">
-                    <p class="main-pp">Pink Flower Tree</p>
+                    <div>
+                        <h5 class="main-pp">Pink Flower Tree</h5>
+                    </div>
                 </div>
             </section>
         </main>
