--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
                     </div>
                 </div>
             </section>
+            <section class="main-2">
+                <div class="icon-m">
+                    <img src="Flower Asset/Group 57.png" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="icon-m">
+                    <img src="" alt="">
+                    <p></p>
+                </div>
+                <div class="icon-m">
+                    <img src="" alt="">
+                    <p></p>
+                </div>
+            </section>
         </main>
         <footer>
 
