--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <main>
             <section class="m-head">
                 <h3 class="s-h">Our Featured Flowers</h3>
-                <h5 class="p-sec">It is a long established fact that a reader will be distracted by the readable content of a page when
+                <h5 class="p-sec">It is a long established fact that a reader will be distracted by the readable content
+                    of a page when
                     looking at its layout.</h5>
             </section>
             <section class="image">
@@ -40,7 +41,7 @@
                     </div>
                 </div>
                 <div class="img-mai">
-                    <img src="Flower Asset/pngwing 5.png" >
+                    <img src="Flower Asset/pngwing 5.png">
                     <div>
                         <h5 class="main-pp">Pink Flower Tree</h5>
                     </div>
@@ -55,22 +56,67 @@
                 </div>
             </section>
             <section class="main-2">
-                <div class="icon-m">
-                    <img src="Flower Asset/Group 57.png" alt="">
-                    <p>Same Day Delivery. Click & Collect.</p>
+                <div>
+                    <img class="icon-m" src="Flower Asset/Group 57.png" alt="">
+                    <p class="icon-pp">Same Day Delivery. Click & Collect.</p>
                 </div>
-                <div class="icon-m">
-                    <img src="" alt="">
-                    <p></p>
+                <div>
+                    <img class="icon-m" src="Flower Asset/Group 58.png" alt="">
+                    <p class="icon-pp">Fresh Flowers. Local Growers.</p>
                 </div>
-                <div class="icon-m">
-                    <img src="" alt="">
-                    <p></p>
+                <div>
+                    <img class="icon-m" src="Flower Asset/Group 59.png" alt="">
+                    <p class="icon-pp">24/7 Free Support.</p>
+                </div>
+            </section>
+            <div class="main-3">
+                <div class="main-section">
+                    <h2 class="section-h">Hot Deal ! Sale Up To 25% <span class="section-head"> Off</span></h2>
+                    <p class="sec-p">It is a long established fact that a reader will be distracted by the readable
+                        content of a page when looking at its layout.</p>
+                    <button class="banner-button">Sign Up</button>
+                </div>
+                <div class="main-sec">
+                    <img class="section-pic" src="Flower Asset/pngwing 8.png" alt="">
+                </div>
+            </div>
+            <div>
+                <div class="src-4">
+                    <h1 class="s-head">Instagram</h2>
+                        <h3 class="p-sec">It is a long established fact that a reader will be distracted by the readable
+                            content of a page when looking at its layout.</h3>
+                </div>
+                <div class="emmilio">
+                    <img src="Flower Asset/Rectangle 4.png" alt="">
+                    <img src="Flower Asset/Rectangle 5.png" alt="">
+                    <img src="Flower Asset/Rectangle 6.png" alt="">
+                    <img src="Flower Asset/Flower 01.png" alt="">
+                </div>
+            </div>
+            </section>
+            <section>
+                <div class="hs-h">
+                    <h1 class="s-h">Get The Latest Deals</h1>
+                    <p class="sec-p">$30 coupon for first shopping</p>
+                    <input class="input-e" placeholder="Enter your email here...." type="email">
+                    <button class="banner-button">Subscribe</button>
                 </div>
             </section>
         </main>
         <footer>
-
+<section>
+    <div class="l-div">
+        <h1 class="s-h">
+           <span class="section-head">Flower</span><span class="ll">Shop</span>
+        </h1>
+        <p class="ll">
+            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+        </p>
+        <span id="ll" class="p-sec">
+         &copy;   @2020-2023, FlowerShop.com. All rights reserved. 
+        </span>
+    </div>
+</section>
         </footer>
 </body>
 
